Aciubotaru/prr 306 (#3)
* Added full licence test

* The licenses.xml was malformed. Corrected

* Probably fixed the license path issue

* Added test for restricted license

* Fixed issue with uploading files in several tests

* Use RemoteWebDriver only when grid.enabled is true

* Added tests for InboundEmailPage

* Added InboundEmailTests in test suite

* Moved licences in the correct folder

* Added 6.3 licenses

* Reset Allowed Senders to default value

* Revert "Reset Allowed Senders to default value"

This reverts commit b00149e5398b3fb108941fc94291e80281fd5838.

* Reset Allowed Senders to default value

* first commit to test connectivity

* Created utility classes for sending emails using telnet, added email server port in properties, refarctored the existing InboundEmailTests, and created editInboundEmailService (test rail id: C231499)

* Formated the code and rebased PRR-298 into this branch

* Added test data cleanup

* Fixed a typo

Co-authored-by: Adina Ababei <adina.ababei@ness.com>